# llm-support-agent

./: .coveragerc  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Dockerfile.backend.prod  INFRASTRUCTURE.md  Makefile  README.md  UI.md  alembic.ini  ask.json  coverage.xml  docker-compose.gpu.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  msg.json  playwright.config.py  pyproject.toml  pytest.ini  req.json  requirements.txt
.github/workflows/: ci.yml  deploy-staging.yml  docker.yml  test.yml
alembic/: env.py
alembic/versions/: 0000_alter_alembic_version_len.py  0000_bootstrap.py  0001_enable_extensions.py  0001_init.py  0001_rebootstrap_schema.py  0002_kb_chunks.py  (+8 more)
docs/: API.md  ARCHITECTURE.md  DATABASE.md
frontend/: Dockerfile  Dockerfile.prod  docker-entrypoint-k8s.sh  index.html  nginx.conf  package-lock.json  package.json
monitoring/: prometheus.yml
nginx/: nginx.conf
ops/: entrypoint.sh  loki-config.yaml  prometheus.yml
scripts/: seed_demo_users.py  smoke.py
src/: __init__.py  main.py
tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_e2e.py  test_health.py  test_http_errors.py  test_integrations_health.py  test_kb.py  test_messages_utils.py  test_metrics_basic.py  test_multitenancy.py  test_permissions.py  test_policies_correct.py  test_prompt_utils.py  test_schema_validation.py  test_tickets.py  test_unit_services.py  test_users.py
ui/: .npmrc  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
(+141 files in other folders)
